# CVO

./: .gitignore  TZ.md  WHOLE_TZ.md  package-lock.json  run-api-with-zrok.sh
AI/: __init__.py  requirements.txt  train_models.py  training_results_20250628_162142.json  training_results_20250628_173305.json  training_results_20250628_173714.json  training_results_20250628_174103.json  training_results_20250628_180646.json  training_results_20250628_183735.json
AI/catboost_info/: catboost_training.json  test_error.tsv
AI/catboost_info/learn/: events.out.tfevents
AI/core/: __init__.py
AI/visualizations/: results_summary.json
Backend/: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.stable  Makefile  Makefile.poetry  alembic.ini  create_test_data.py  deploy-production.sh  deploy-to-server.sh  docker-compose.full.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run-api-with-zrok.sh  scripts.py  start-api-with-all-dbs.sh  sword
Backend/AI/: README.md  USAGE_INSTRUCTIONS.md  __init__.py  config.py  requirements_minimal.txt  training_results_20250628_170425.json
Backend/AI/catboost_info/: learn_error.tsv  time_left.tsv
Backend/AI/catboost_info/test/: events.out.tfevents
Backend/AI/core/: __init__.py  data_processing.py
Backend/AI/visualization/: __init__.py  live_progress.py  training_viz.py
Backend/AI/visualizations/: training_report.html
Backend/alembic/: env.py
Backend/alembic/versions/: 1a86116879f4_create_all_real_estate_models.py  2a42300bdd32_create_initial_database_tables.py  89f9acc19f6e_add_missing_tables_and_models.py  f8a98fd955b0_initial_migration_with_user_model.py
Backend/app/: __init__.py  main.py
Backend/app/api/v1/: router.py
Backend/app/api/v1/endpoints/: ai.py  analytics.py  auth.py  bookings.py  complexes.py  developers.py  favorites.py  leads.py  promo_codes.py  properties.py  reviews.py  users.py
Backend/app/core/: clickhouse.py  config.py  database.py  dependencies.py  exceptions.py  kafka.py  logging.py  mongodb.py  monitoring.py  redis.py  security.py
Backend/app/models/: __init__.py  base.py  developer.py  favorite.py  lead.py  mongodb.py  property.py  property_document.py  property_image.py  review.py  search_history.py  user.py  view_history.py
Backend/app/repositories/: __init__.py  base.py  developer_repository.py  property_repository.py  user_repository.py
Backend/app/schemas/: ai.py  auth.py  booking.py  complex.py  developer.py  favorite.py  lead.py  promo_code.py  property.py  review.py  user.py
Backend/app/scripts/: seed_developers.py
Backend/app/services/: ai_service.py  analytics_service.py  auth_service.py  base_service.py  booking_service.py  complex_service.py  developer_service.py  favorite_service.py  file_service.py  jwt_service.py  lead_service.py  promo_code_service.py  property_service.py  review_service.py  sms_service.py  user_service.py
Backend/app/utils/: db_utils.py  security.py
Backend/k8s/: argocd-application.yaml
Backend/k8s/base/: api-deployment.yaml  api-hpa.yaml  api-ingress.yaml  api-service.yaml  configmap.yaml
Backend/monitoring/: prometheus.yml
Backend/monitoring/logstash/pipeline/: logstash.conf
Backend/nginx/: nginx.conf
Backend/nginx/conf.d/: api.conf
Backend/scripts/: clickhouse-init.sql  dev-commands.py  init-project.py  mongo-init.js  postgres-init.sql  setup-dev.sh  setup-full-stack.sh
Frontend/: package-lock.json  package.json
Frontend/.nuxt/: tsconfig.json  tsconfig.server.json
Frontend/.nuxt/types/: build.d.ts  nitro-imports.d.ts  plugins.d.ts
Frontend/assets/css/: main.css
Frontend/components/Header/: Navbar.vue
Frontend/pages/: index.vue
Frontend/pages/auth/: login.vue  register.vue
Frontend/store/: api.js
